fixed the searchbar overlaping hotels

--- a/client/components/card/card.module.css
+++ b/client/components/card/card.module.css
@@ -11,6 +11,7 @@
   position: relative;
   transform: scale(1);
   transition: all 0.3s ease;
+  z-index: 1;
 }
 
 .card::after {
