--- a/client/components/form/input/input.module.css
+++ b/client/components/form/input/input.module.css
@@ -96,12 +96,10 @@
   padding: 9px 16px;
   width: 100%;
   position: relative;
+  cursor: pointer;
 }
 
 .select {
-  /* -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none; */
 }
 .guestsInput {
   text-align: center;
