--- a/client/components/heroHeaderHotels/heroHeaderHotels.module.css
+++ b/client/components/heroHeaderHotels/heroHeaderHotels.module.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 80vh;
+  height: 90vh;
   margin-top: -21vh;
   position: relative;
   margin-bottom: 80px;
@@ -38,7 +38,7 @@
   transform: translate(-50%, 50%);
   z-index: 1;
   width: 90%;
-  top: 70px;
+  top: -30px;
   max-width: 400px;
 }
 
@@ -51,6 +51,6 @@
 
   .searchContainer {
     min-width: min-content;
-    top: -30px;
+    top: 0px;
   }
 }
